<resources>
    <string name="app_name">Money Tracker</string>
    <string name="author_name">\@Allerria</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="balance">Balance</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="wipe_data">Wipe all data</string>
    <string name="data_deletion">Wipe data</string>
    <string name="are_you_sure_to_delete">Are you sure?</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="rub">RUB</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>

    <string name="auto">Auto</string>
    <string name="clothing">Clothing</string>
    <string name="house">House</string>
    <string name="cafe_and_restaurants">Cafe and Restaurants</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="other">Other</string>
    <string name="salary">Salary</string>
    <string name="gift">Gift</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>

    <string name="fill_value">Please fill value field</string>
    <string name="fill_name">Please fill wallet name field</string>
    <string name="success">Success!</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="wallet">Wallet</string>
    <string name="details">Details</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="currency">Currency</string>
    <string name="initial_balance">Initial balance</string>
    <string name="add_wallet_in_balance">There is 2 ways to add Wallet: from settings or via button in right bottom corner</string>
    <string name="main">Main</string>
    <string name="info">Details</string>
    <string name="templates">Templates</string>
    <string name="add_template">Add template</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>
    <string name="period">Period</string>

    <string-array name="currencies">
        <item>@string/rub</item>
        <item>@string/usd</item>
        <item>@string/eur</item>
    </string-array>
    <string-array name="wallets">
        <item>@string/cash</item>
        <item>@string/card</item>
    </string-array>
    <string-array name="transaction_types">
        <item>@string/expense</item>
        <item>@string/income</item>
    </string-array>
    <string-array name="template_periods">
        <item>@string/every_day</item>
        <item>@string/every_week</item>
        <item>@string/every_month</item>
    </string-array>
    <string-array name="transaction_expense_categories">
        <item>@string/auto</item>
        <item>@string/clothing</item>
        <item>@string/house</item>
        <item>@string/cafe_and_restaurants</item>
        <item>@string/entertainment</item>
        <item>@string/health</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="transaction_income_categories">
        <item>@string/salary</item>
        <item>@string/gift</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="wallet_types">
        <item>@string/card</item>
        <item>@string/cash</item>
    </string-array>
</resources>
