<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/template_period_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/period"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/template_period_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_8"
            android:entries="@array/template_periods"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/template_period_text_view"
            tools:listitem="@android:layout/simple_selectable_list_item" />

        <TextView
            android:id="@+id/template_transaction_type_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/template_period_spinner" />

        <Spinner
            android:id="@+id/template_transaction_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_8"
            android:entries="@array/transaction_types"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/template_transaction_type_text_view"
            tools:listitem="@android:layout/simple_selectable_list_item" />

        <TextView
            android:id="@+id/template_transaction_category_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/template_transaction_type_spinner" />

        <AutoCompleteTextView
            android:id="@+id/template_transaction_category_autocomplete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/template_transaction_category_text_view" />

        <TextView
            android:id="@+id/template_transaction_value_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/template_transaction_category_autocomplete" />

        <EditText
            android:id="@+id/template_transaction_value_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_8"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/template_transaction_value_text_view" />


        <TextView
            android:id="@+id/template_transaction_wallet_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/wallet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/template_transaction_value_edit_text" />

        <Spinner
            android:id="@+id/template_transaction_wallet_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/template_transaction_wallet_text_view" />

        <Button
            android:id="@+id/add_template_transaction_button"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:text="@string/create"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/template_transaction_wallet_spinner" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>